# misuco3

./: .gitmodules  CMakeLists.txt  ControlArea.qml  ControlButton.qml  ControlDial.qml  ControlSlider.qml  Emboss.qml  Main.qml  Parameters.ui.qml  Parameters_Mod.ui.qml  Parameters_Osc.ui.qml  Parameters_Osc_2.ui.qml  TouchButton.qml  WEB_README.md  index.html  main.cpp  styles.css
.github/workflows/: android  qt68_android.yml
docs/: FreqFormula.ods  misuco3.odg
js/: app.js  color-palette.js  synth-engine.js  touch-handler.js  ui-controller.js
qml/: AudioDevice.qml  AudioDevice.ui.qml  AudioDeviceForm.ui.qml  ColorPalette.js  ControlArea.qml  ControlButton.qml  ControlSlider.qml  ControlSliderRange.qml  ControlSliderTuning.qml  Emboss.qml  Main.qml  PlayArea.qml  ScaleConfig.ui.qml  TouchButton.qml  Tuning.ui.qml  VoiceControl.js
